--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "validator": "^13.6.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/validator": "github:types/validator",
